--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                 </form>
             </div>
             <a href="https://www.contadorvisitasgratis.com" class="contadorvisitas" title="contador de visitas"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=ssq7pf8zbqcuhu9p49le1gntrjbb5ka4" border="0" title="contador de visitas para blogger" alt="contador de visitas"></a>
+            <br>
+            <br>
+            <a class="twitter-timeline" data-lang="es" data-width="250" data-height="220" data-dnt="true" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </footer>
 </body>
 </html>
